use new command structure

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,5 +6,6 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-frcrs = { git = "https://github.com/Team-2502/frcrs", branch = "master" }
+#frcrs = { git = "https://github.com/Team-2502/frcrs", branch = "master" }
+frcrs = { path = "../../frcrs" }
 tokio = { version = "1.38.0", features = ["full", "rt"] }
