use github frcrs Co-authored-by: Nolan ndpete2007@gmail.com

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,7 +9,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-frcrs = { path = "../../frcrs" }
+frcrs = { git = "https://github.com/Team-2502/frcrs.git" }
 tokio = { version = "1.38.0", features = ["full", "rt"] }
 serde = { version = "1.0.209", features = ["derive"] }
 serde_json = "1.0.128"
